--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-image: url('background.jpg');
+    background-image: url('https://cdnb.artstation.com/p/assets/images/images/058/152/587/large/scott-hammontree-mcmaricopaaz-an-epic-scenic-minecraft-landscape-in-the-style-of-b6685bc2-929d-4543-b901-1f60c198331e.jpg?1673502217');
     background-size: cover;
     height: 100vh;
     color: white;
@@ -95,15 +95,46 @@ nav ul li a {
     text-align: center;
 }
 
-.screenshot-gallery img {
-    width: 30%;
-    margin: 10px;
-    border-radius: 10px;
-    transition: transform 0.3s;
+.carousel-container {
+    position: relative;
+    max-width: 100%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.screenshot-gallery img:hover {
-    transform: scale(1.05);
+.screenshot-gallery {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+    width: 300%; /* 100% * number of images */
+}
+
+.screenshot-gallery img {
+    width: 33.33%; /* 100% / 3 images */
+    flex-shrink: 0;
+    border-radius: 10px;
+}
+
+.arrow {
+    position: absolute;
+    top: 50%;
+    font-size: 2rem;
+    color: white;
+    cursor: pointer;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+    z-index: 10;
+    transform: translateY(-50%);
+}
+
+.left-arrow {
+    left: 10px;
+}
+
+.right-arrow {
+    right: 10px;
 }
 
 #download {
@@ -114,8 +145,7 @@ nav ul li a {
 }
 
 footer {
-    background-color: #333;
-    color: white;
+    color: black;
     padding: 20px;
     text-align: center;
 }
