--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ nav ul li a {
     right: 10px;
 }
 
-#download {
+#Maj {
     background-color: #ffb100;
     color: white;
     padding: 50px 20px;
