--- a/CSS/server.css
+++ b/CSS/server.css
@@ -139,18 +139,22 @@ ul {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: auto;
 }
 
 .screenshot-gallery {
     display: flex;
     transition: transform 0.5s ease-in-out;
-    width: 300%; /* 100% * number of images */
+    width: 300%; 
+    gap: 10px; 
 }
 
 .screenshot-gallery img {
-    width: 33.33%; /* 100% / 3 images */
+    width: 33.33%; 
+    width: calc((100% / 3) - 10px); 
     flex-shrink: 0;
     border-radius: 10px;
+    transition: transform 0.5s ease-in-out; 
 }
 
 .arrow {
@@ -174,7 +178,6 @@ ul {
     right: 10px;
 }
 
-/* Section Nous Rejoindre */
 .join-us {
     padding: 50px 20px;
     background-color: #4CAF50;
