--- a/CSS/server.css
+++ b/CSS/server.css
@@ -180,9 +180,8 @@ ul {
 
 .join-us {
     padding: 50px 20px;
-    background-color: #4CAF50;
     text-align: center;
-    color: white;
+    color: b;
 }
 
 .join-us h2 {
