--- a/CSS/Down.css
+++ b/CSS/Down.css
@@ -59,13 +59,22 @@ nav ul li a {
 }
 
 .btn {
-    background-color: #ffb100;
+    border: none;
     color: white;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 15px;
     padding: 15px 30px;
-    text-decoration: none;
-    border-radius: 5px;
-    font-weight: bold;
+    border-radius:0px;
     transition: background-color 0.3s;
+}
+
+.btn-down {
+    background-color: #ffb100;
+}
+
+.btn-down:hover {
+    background-color: #ff8c00;
 }
 
 .btn-Quit {
@@ -73,22 +82,8 @@ nav ul li a {
 }
 
 .btn-Quit:hover {
-    background-color: black;
+    background-color: firebrick;
 }
-
-.btn-Journal {
-    background-color: #0cdf08;
-}
-
-.btn-Journal:hover {
-    background-color: black;
-}
-
-
-.btn:hover {
-    background-color: #ff8c00;
-}
-
 #features {
     background-color: white;
     padding: 50px 20px;
