--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -55,24 +55,52 @@ nav ul li a {
 }
 
 .btn {
-    background-color: #ffb100;
+    border: none;
     color: white;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 15px;
     padding: 15px 30px;
-    text-decoration: none;
     border-radius:0px;
     transition: background-color 0.3s;
 }
 
+.btn-down {
+    background-color: #ffb100;
+}
+
+.btn-down:hover {
+    background-color: #ff8c00;
+}
 .btn-Contact {
     background-color: green;
 }
 
 .btn-Contact:hover {
-    background-color: aquamarine;
+    background-color: rgb(0, 65, 0);
 }
 
-.btn:hover {
-    background-color: #ff8c00;
+.btn-serv {
+    background-color: rgb(3, 101, 181);
+}
+
+.btn-serv:hover {
+    background-color: rgb(2, 63, 112);
+}
+
+.btn-journal {
+    background-color: rgb(91, 46, 46);
+}
+
+.btn-journal:hover {
+    background-color: rgb(52, 26, 26);
+}
+
+#server {
+    padding: 50px 20px;
+    background-color: #ffffff;
+    text-align: center;
+    color: black
 }
 
 #features {
