--- a/CSS/Contact.css
+++ b/CSS/Contact.css
@@ -71,13 +71,15 @@ body {
 }
 
 .btn {
-background-color: #fefefe;
-color: white;
-padding: 15px 30px;
-text-decoration: none;
-border-radius: 5px;
-font-weight: bold;
-transition: background-color 0.3s;
+    border: none;
+    border-radius: 25px;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 15px;
+    padding: 15px 30px;
+    border-radius:0px;
+    transition: background-color 0.3s;
 }
 
 .btn-Quit {
@@ -85,7 +87,7 @@ background-color: red;
 }
 
 .btn-Quit:hover {
-background-color: rgb(17, 104, 135);
+background-color: rgb(121, 1, 1);
 }
     
 .btn-Disc {
