--- a/CSS/server.css
+++ b/CSS/server.css
@@ -197,8 +197,8 @@ ul {
 
 .join-link {
     padding: 15px 30px;
-    background-color: white;
-    color: #4CAF50;
+    background-color: #45a049;
+    color: black;
     text-decoration: none;
     font-size: 1.2em;
     border-radius: 5px;
@@ -206,8 +206,7 @@ ul {
 }
 
 .join-link:hover {
-    background-color: #45a049;
-    color: white;
+    background-color: #327434;
 }
 
 .discord-link {
