--- a/CSS/Down.css
+++ b/CSS/Down.css
@@ -65,7 +65,7 @@ nav ul li a {
     cursor: pointer;
     margin: 15px;
     padding: 15px 30px;
-    border-radius:0px;
+    border-radius:7px;
     transition: background-color 0.3s;
 }
 
@@ -76,6 +76,15 @@ nav ul li a {
 .btn-down:hover {
     background-color: #ff8c00;
 }
+
+.btn-down2 {
+    background-color: #ffb100;
+}
+
+.btn-down2:hover {
+    background-color: #ff8c00;
+}
+
 
 .btn-Quit {
     background-color: red;
