--- a/CSS/server.css
+++ b/CSS/server.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-    background-image: url('https://cdnb.artstation.com/p/assets/images/images/058/152/587/large/scott-hammontree-mcmaricopaaz-an-epic-scenic-minecraft-landscape-in-the-style-of-b6685bc2-929d-4543-b901-1f60c198331e.jpg?1673502217');
+    background-image: url('https://i.imgur.com/bvMSnzu.jpeg');
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -187,6 +187,43 @@ ul {
 .join-us h2 {
     font-size: 2em;
     margin-bottom: 20px;
+}
+
+.image-popup {
+    display: none; /* Cachée par défaut */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); /* Fond noir semi-transparent */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+.image-popup img {
+    max-width: 90%;
+    max-height: 90%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+.btn {
+    border: none;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 15px;
+    padding: 15px 30px;
+    border-radius:0px;
+    transition: background-color 0.3s;
+}
+
+.btn-down {
+    background-color:#ffb100; ;
+}
+
+.btn-down:hover {
+    background-color:#ff8c00 ;
 }
 
 .join-buttons {
