--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -33,6 +33,24 @@ nav ul {
     display: flex;
 }
 
+.image-popup {
+    display: none; /* Cachée par défaut */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); /* Fond noir semi-transparent */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+.image-popup img {
+    max-width: 90%;
+    max-height: 90%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+
 nav ul li {
     margin: 0 15px;
 }
@@ -63,6 +81,14 @@ nav ul li a {
     padding: 15px 30px;
     border-radius:0px;
     transition: background-color 0.3s;
+}
+
+.btn-amis {
+    background-color: rgb(9, 221, 9);
+}
+
+.btn-amis:hover {
+    background-color: green;
 }
 
 .btn-down {
@@ -179,6 +205,13 @@ nav ul li a {
 #Maj {
     background-color: #ffb100;
     color: white;
+    padding: 50px 20px;
+    text-align: left;
+}
+
+#Server {
+    background-color: #bac7c86f;
+    color: rgb(0, 0, 0);
     padding: 50px 20px;
     text-align: center;
 }
